--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
-  <div id="todo-container">
-    <ul>
-    </ul>
-  </div>
+  <h1>Form</h1>
+  <form id="todo-container">
+
+
+
+  </form>
   <form id="add-todo">
     <input type="text" name="description" value="">
     <input type="submit" name="button" value="Submit">
