Updated CSS and index

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <html lang="en-UK"></html>
+        <title>To-do list</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Jua|Pangolin|Varela+Round" rel="stylesheet">  
-  
-</head>
+  </head>
+
 <header><br><br><h1>My to-do list</h1></header>
 
 <body>
@@ -24,7 +25,8 @@
 
   </form>
   <form class='form'>
-    <input type="text" name="description" value="">
+      <label for="add-text"></label>
+    <input type="text"  name="description" id='add-text' value="">
     <input type="submit" id='submit-button' name="button" value="Submit">
   </form>
 </body>
